group 'codechicken'
version '2.0.0'

version = "$version." + (System.getenv("BUILD_NUMBER") ?: "1")
println "Starting build of ${name}, Version: ${version}"

subprojects { subProject ->
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
        withSourcesJar()
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://maven.covers1624.net/" }
        maven { url "https://maven.minecraftforge.net/" }
    }

    dependencies {
        compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
        compileOnly 'org.jetbrains:annotations:22.0.0'
    }

    publishing {
        repositories {
            if (System.getenv('MAVEN_PASS')) {
                maven {
                    url "https://nexus.covers1624.net/repository/maven-releases/"
                    credentials {
                        username 'covers1624'
                        password System.getenv('MAVEN_PASS')
                    }
                }
            }
        }
        publications {
            publication(MavenPublication) {
                group = rootProject.group
                version = rootProject.version

                pom {
                    name = archivesBaseName
                    description = archivesBaseName
                    url = "https://github.com/TheCBProject/TraitMixinCompiler"
                    scm {
                        url = "https://github.com/TheCBProject/TraitMixinCompiler"
                        connection = "scm:git:git://github.com/TheCBProject/TraitMixinCompiler.git"
                        connection = "scm:git:git@github.com:TheCBProject/TraitMixinCompiler.git"
                    }

                    issueManagement {
                        system = 'github'
                        url = "https://github.com/TheCBProject/TraitMixinCompiler/issues"
                    }
                    licenses {
                        license {
                            name = "MIT"
                            url = "https://raw.githubusercontent.com/TheCBProject/TraitMixinCompiler/master/LICENSE.txt"
                            distribution = 'repo'
                        }
                    }
                    developers {
                        developer {
                            id = 'covers1624'
                            name = 'covers1624'
                        }
                    }
                    developers {
                        developer {
                            id = 'chicken-bones'
                            name = 'chicken-bones'
                        }
                    }
                }
            }
        }
    }
}
